RESOLVED FIXED276308
[LibWebRTC] WPE/GTK build fails
https://bugs.webkit.org/show_bug.cgi?id=276308
Summary [LibWebRTC] WPE/GTK build fails
Philippe Normand
Reported 2024-07-08 03:10:21 PDT
Missing header in LibWebRTCProvider.cpp for the log sink.
Attachments
Philippe Normand
Comment 1 2024-07-08 03:13:00 PDT
EWS
Comment 2 2024-07-08 03:15:23 PDT
Committed 280724@main (0c9aa4d98e54): <https://commits.webkit.org/280724@main> Reviewed commits have been landed. Closing PR #30561 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-07-08 03:16:14 PDT
Note You need to log in before you can comment on or make changes to this bug.