[LibWebRTC] WPE/GTK build fails https://bugs.webkit.org/show_bug.cgi?id=276308

Unreviewed, fix LibWebRTC build for the WPE/GTK ports.

* Source/WebCore/platform/mediastream/libwebrtc/LibWebRTCProvider.cpp:

Canonical link: https://commits.webkit.org/280724@main